--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,21 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-02 Fri 11:05]
+#+CAPTION: Clock summary at [2016-12-02 Fri 12:11]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:24* |       |      | 100.0 |
+| *Total time*                                                                | *11:29* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:24   |       |      | 100.0 |
-| Active                                                                      |         | 10:24 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  17.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   9.9 |
-| COMPLETED Update readme                                                     |         |       | 0:11 |   1.8 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   5.3 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |  10.3 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   5.1 |
-| STARTED Add support for C#                                                  |         |       | 5:11 |  49.8 |
+| Stories                                                                     | 11:29   |       |      | 100.0 |
+| Active                                                                      |         | 11:29 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  16.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   9.0 |
+| COMPLETED Update readme                                                     |         |       | 0:11 |   1.6 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   4.8 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   9.3 |
+| COMPLETED Move project directory to output options                          |         |       | 0:59 |   8.6 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   4.6 |
+| STARTED Add support for C#                                                  |         |       | 5:17 |  46.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -124,6 +125,20 @@ formatting. Perhaps a better way is to do nothing. The user is still
 responsible for providing the template. We just create a blank file
 for the expanded content.
 
+*** COMPLETED Move project directory to output options                :story:
+    CLOSED: [2016-12-02 Fri 12:11]
+    CLOCK: [2016-12-02 Fri 11:12]--[2016-12-02 Fri 12:11] =>  0:59
+
+At present we have only one C++ specific option left:
+
+: project_directory_path
+
+In truth, this is not C++ specific at all. We need to move it to
+output options and delete the class.
+
+Actually we have so few options now that it makes more sense to just
+merge them into a single class.
+
 *** STARTED Add support for Decimal numbers                           :story:
     CLOCK: [2016-11-30 Wed 13:04]--[2016-11-30 Wed 13:36] =>  0:32
 
@@ -131,6 +146,7 @@ for the expanded content.
 - check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** STARTED Add support for C#                                        :story:
+    CLOCK: [2016-12-02 Fri 11:06]--[2016-12-02 Fri 11:12] =>  0:06
     CLOCK: [2016-12-02 Fri 10:35]--[2016-12-02 Fri 11:05] =>  0:30
     CLOCK: [2016-12-02 Fri 10:15]--[2016-12-02 Fri 10:35] =>  0:20
     CLOCK: [2016-12-01 Thu 11:01]--[2016-12-01 Thu 12:16] =>  1:15
