--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-02 Fri 12:11]
+#+CAPTION: Clock summary at [2016-12-02 Fri 13:28]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:29* |       |      | 100.0 |
+| *Total time*                                                                | *11:47* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:29   |       |      | 100.0 |
-| Active                                                                      |         | 11:29 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  16.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   9.0 |
+| Stories                                                                     | 11:47   |       |      | 100.0 |
+| Active                                                                      |         | 11:47 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  15.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   8.8 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   1.6 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   4.8 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   9.3 |
-| COMPLETED Move project directory to output options                          |         |       | 0:59 |   8.6 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   4.6 |
-| STARTED Add support for C#                                                  |         |       | 5:17 |  46.0 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   4.7 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   9.1 |
+| COMPLETED Move project directory to output options                          |         |       | 0:59 |   8.3 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   4.5 |
+| STARTED Add support for C#                                                  |         |       | 5:35 |  47.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -146,6 +146,7 @@ merge them into a single class.
 - check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** STARTED Add support for C#                                        :story:
+    CLOCK: [2016-12-02 Fri 13:10]--[2016-12-02 Fri 13:28] =>  0:18
     CLOCK: [2016-12-02 Fri 11:06]--[2016-12-02 Fri 11:12] =>  0:06
     CLOCK: [2016-12-02 Fri 10:35]--[2016-12-02 Fri 11:05] =>  0:30
     CLOCK: [2016-12-02 Fri 10:15]--[2016-12-02 Fri 10:35] =>  0:20
