--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,22 +12,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-04 Sun 18:45]
+#+CAPTION: Clock summary at [2016-12-04 Sun 18:52]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:02* |       |      | 100.0 |
+| *Total time*                                                                | *12:09* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:02   |       |      | 100.0 |
-| Active                                                                      |         | 12:02 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  15.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   8.6 |
+| Stories                                                                     | 12:09   |       |      | 100.0 |
+| Active                                                                      |         | 12:09 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  15.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   8.5 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   1.5 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   4.6 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   8.9 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   9.7 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   4.5 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   8.8 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   9.6 |
 | STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   4.4 |
-| STARTED Add support for C#                                                  |         |       | 5:39 |  47.0 |
+| STARTED Add support for C#                                                  |         |       | 5:46 |  47.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -147,6 +147,7 @@ merge them into a single class.
 - check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** STARTED Add support for C#                                        :story:
+    CLOCK: [2016-12-04 Sun 18:45]--[2016-12-04 Sun 18:52] =>  0:07
     CLOCK: [2016-12-04 Sun 18:29]--[2016-12-04 Sun 18:33] =>  0:04
     CLOCK: [2016-12-02 Fri 13:10]--[2016-12-02 Fri 13:28] =>  0:18
     CLOCK: [2016-12-02 Fri 11:06]--[2016-12-02 Fri 11:12] =>  0:06
