--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,25 +12,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-05 Mon 00:34]
+#+CAPTION: Clock summary at [2016-12-05 Mon 09:18]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:56* |       |      | 100.0 |
+| *Total time*                                                                | *18:00* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:56   |       |      | 100.0 |
-| Active                                                                      |         | 16:56 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  10.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   6.1 |
-| COMPLETED Update readme                                                     |         |       | 0:11 |   1.1 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   3.2 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   6.3 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   6.9 |
-| STARTED Update the conceptual model to clarify backends and kernels         |         |       | 3:16 |  19.3 |
-| STARTED Clean up kernel and backend confusion                               |         |       | 0:54 |   5.3 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   3.1 |
-| STARTED Add support for C#                                                  |         |       | 5:46 |  34.1 |
-| STARTED Add a "language" directory for each backend                         |         |       | 0:37 |   3.6 |
+| Stories                                                                     | 18:00   |       |      | 100.0 |
+| Active                                                                      |         | 18:00 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |  10.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   5.7 |
+| COMPLETED Update readme                                                     |         |       | 0:11 |   1.0 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   3.1 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   5.9 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   6.5 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  24.1 |
+| STARTED Clean up kernel and backend confusion                               |         |       | 0:54 |   5.0 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   3.0 |
+| STARTED Add support for C#                                                  |         |       | 5:46 |  32.0 |
+| STARTED Add a "language" directory for each backend                         |         |       | 0:37 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -143,14 +143,20 @@ output options and delete the class.
 Actually we have so few options now that it makes more sense to just
 merge them into a single class.
 
-*** STARTED Update the conceptual model to clarify backends and kernels :story:
+*** COMPLETED Update the conceptual model to clarify backends and kernels :story:
+    CLOSED: [2016-12-05 Mon 09:18]
+    CLOCK: [2016-12-05 Mon 08:51]--[2016-12-05 Mon 09:17] =>  0:26
+    CLOCK: [2016-12-05 Mon 08:12]--[2016-12-05 Mon 08:50] =>  0:38
     CLOCK: [2016-12-04 Sun 23:13]--[2016-12-05 Mon 00:33] =>  1:20
     CLOCK: [2016-12-04 Sun 20:36]--[2016-12-04 Sun 22:32] =>  1:56
+
+*Rationale*: this story is not totally completed but its clear enough
+so that we can now proceed with implementation. Further clean up will
+have to wait for some available time.
 
 It seems we did not do a great job at our first stab of the conceptual
 model. Add the required clarifications for kernel and backends and do
 a small tidy-up to ensure what's there makes sense.
-
 
 *** STARTED Clean up kernel and backend confusion                     :story:
     CLOCK: [2016-12-04 Sun 19:41]--[2016-12-04 Sun 20:35] =>  0:54
